WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
154490
Land release assertions to help track down a possible HTMLCollection lifetime bug
https://bugs.webkit.org/show_bug.cgi?id=154490
Summary
Land release assertions to help track down a possible HTMLCollection lifetime...
Chris Dumez
Reported
2016-02-19 19:10:08 PST
Land release assertions to help track down a possible HTMLCollection lifetime bug.
Attachments
Patch
(5.16 KB, patch)
2016-02-19 19:16 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-02-19 19:10:28 PST
rdar://problem/24457478
Chris Dumez
Comment 2
2016-02-19 19:16:38 PST
Created
attachment 271841
[details]
Patch
WebKit Commit Bot
Comment 3
2016-02-19 20:41:03 PST
Comment on
attachment 271841
[details]
Patch Clearing flags on attachment: 271841 Committed
r196854
: <
http://trac.webkit.org/changeset/196854
>
WebKit Commit Bot
Comment 4
2016-02-19 20:41:07 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5
2016-03-31 16:59:16 PDT
Reverted
r196854
for reason: We do not need those assertions anymore as it seems <
rdar://problem/24457478
> is fixed Committed
r198931
: <
http://trac.webkit.org/changeset/198931
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug