Source/WebCore/html/HTMLCollection.cpp
@@ -109,6 +109,7 @@ HTMLCollection::HTMLCollection(ContainerNode& ownerNode, CollectionType type)
     , m_collectionType(type)
     , m_invalidationType(invalidationTypeExcludingIdAndNameAttributes(type))
     , m_rootType(rootTypeFromCollectionType(type))
+    , m_wasDeletionStarted(false)
 {
     ASSERT(m_rootType == static_cast<unsigned>(rootTypeFromCollectionType(type)));
     ASSERT(m_invalidationType == static_cast<unsigned>(invalidationTypeExcludingIdAndNameAttributes(type)));
@@ -117,6 +118,8 @@ HTMLCollection::HTMLCollection(ContainerNode& ownerNode, CollectionType type)
 
 HTMLCollection::~HTMLCollection()
 {
+    m_wasDeletionStarted = true;
+
     if (hasNamedElementCache())
         document().collectionWillClearIdNameMap(*this);
 
