Source/WebCore/html/HTMLCollection.h
@@ -85,6 +85,8 @@ public:
 
     bool hasNamedElementCache() const;
 
+    bool wasDeletionStarted() { return m_wasDeletionStarted; }
+
 protected:
     HTMLCollection(ContainerNode& base, CollectionType);
 
@@ -108,6 +110,8 @@ protected:
     const unsigned m_collectionType : 5;
     const unsigned m_invalidationType : 4;
     const unsigned m_rootType : 1;
+    // FIXME: This flag is here temporarily to help track down a possible lifetime issue (rdar://problem/24457478).
+    unsigned m_wasDeletionStarted : 1;
 };
 
 inline ContainerNode& HTMLCollection::rootNode() const
